--- a/src/demo_1/index.html
+++ b/src/demo_1/index.html
@@ -250,19 +250,19 @@
               <div class="collapse" id="auth">
                 <ul class="nav flex-column sub-menu">
                   <li class="nav-item">
-                    <a class="nav-link" href="pages/samples/blank-page.html"> Blank Page </a>
+                    <a class="nav-link" href="blank-page.html"> Blank Page </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="pages/samples/login.html"> Login </a>
+                    <a class="nav-link" href="login.html"> Login </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="pages/samples/register.html"> Register </a>
+                    <a class="nav-link" href="register.html"> Register </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="pages/samples/error-404.html"> 404 </a>
+                    <a class="nav-link" href="errors/error-404.html"> 404 </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="pages/samples/error-500.html"> 500 </a>
+                    <a class="nav-link" href="errors/error-500.html"> 500 </a>
                   </li>
                 </ul>
               </div>
@@ -452,7 +452,7 @@
                         </div>
                         <h3 class="font-weight-medium mb-4">184.42K</h3>
                       </div>
-                      <canvas class="mt-n4" height="90" id="total-revenue"></canva>
+                      <canvas class="mt-n4" height="90" id="total-revenue"></canvas>
                     </div>
                   </div>
                   <div class="col-md-6 grid-margin stretch-card">
@@ -464,7 +464,7 @@
                         </div>
                         <h3 class="font-weight-medium">147.7K</h3>
                       </div>
-                      <canvas class="mt-n3" height="90" id="total-transaction"></canva>
+                      <canvas class="mt-n3" height="90" id="total-transaction"></canvas>
                     </div>
                   </div>
                   <div class="col-md-12 grid-margin">
