--- a/src/demo_1/login.html
+++ b/src/demo_1/login.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Star Admin Premium Bootstrap Admin Dashboard Template</title>
     <!-- plugins:css -->
-    <link rel="stylesheet" href="../../../assets/vendors/iconfonts/mdi/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="../../../assets/vendors/iconfonts/ionicons/css/ionicons.css">
-    <link rel="stylesheet" href="../../../assets/vendors/iconfonts/typicons/src/font/typicons.css">
-    <link rel="stylesheet" href="../../../assets/vendors/iconfonts/flag-icon-css/css/flag-icon.min.css">
-    <link rel="stylesheet" href="../../../assets/vendors/css/vendor.bundle.base.css">
-    <link rel="stylesheet" href="../../../assets/vendors/css/vendor.bundle.addons.css">
+    <link rel="stylesheet" href="../assets/vendors/iconfonts/mdi/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="../assets/vendors/iconfonts/ionicons/css/ionicons.css">
+    <link rel="stylesheet" href="../assets/vendors/iconfonts/typicons/src/font/typicons.css">
+    <link rel="stylesheet" href="../assets/vendors/iconfonts/flag-icon-css/css/flag-icon.min.css">
+    <link rel="stylesheet" href="../assets/vendors/css/vendor.bundle.base.css">
+    <link rel="stylesheet" href="../assets/vendors/css/vendor.bundle.addons.css">
     <!-- endinject -->
     <!-- plugin css for this page -->
     <!-- End plugin css for this page -->
     <!-- inject:css -->
-    <link rel="stylesheet" href="../../../assets/css/shared/style.css">
+    <link rel="stylesheet" href="../assets/css/shared/style.css">
     <!-- endinject -->
-    <link rel="shortcut icon" href="../../../assets/images/favicon.png" />
+    <link rel="shortcut icon" href="../assets/images/favicon.png" />
   </head>
   <body>
     <div class="container-scroller">
@@ -27,11 +27,11 @@
           <div class="row w-100">
             <div class="col-lg-4 mx-auto">
               <div class="auto-form-wrapper">
-                <form action="#">
+                <form action="php/login.php" method="post">
                   <div class="form-group">
                     <label class="label">Username</label>
                     <div class="input-group">
-                      <input type="text" class="form-control" placeholder="Username">
+                      <input type="text" class="form-control" id="username" name="username" placeholder="Nome de Usuário">
                       <div class="input-group-append">
                         <span class="input-group-text">
                           <i class="mdi mdi-check-circle-outline"></i>
@@ -40,9 +40,9 @@
                     </div>
                   </div>
                   <div class="form-group">
-                    <label class="label">Password</label>
+                    <label class="label">Senha</label>
                     <div class="input-group">
-                      <input type="password" class="form-control" placeholder="*********">
+                      <input type="password" class="form-control" id="password" name="password" placeholder="*********">
                       <div class="input-group-append">
                         <span class="input-group-text">
                           <i class="mdi mdi-check-circle-outline"></i>
@@ -51,37 +51,34 @@
                     </div>
                   </div>
                   <div class="form-group">
-                    <button class="btn btn-primary submit-btn btn-block">Login</button>
+                    <button class="btn btn-primary submit-btn btn-block">Logar</button>
                   </div>
                   <div class="form-group d-flex justify-content-between">
                     <div class="form-check form-check-flat mt-0">
                       <label class="form-check-label">
-                        <input type="checkbox" class="form-check-input" checked> Keep me signed in </label>
+                        <input type="checkbox" class="form-check-input" checked> Me manter conectado </label>
                     </div>
-                    <a href="#" class="text-small forgot-password text-black">Forgot Password</a>
+                    <a href="#" class="text-small forgot-password text-black">Esqueci minha senha</a>
                   </div>
                   <div class="form-group">
                     <button class="btn btn-block g-login">
-                      <img class="mr-3" src="../../../assets/images/file-icons/icon-google.svg" alt="">Log in with Google</button>
+                      <img class="mr-3" src="../assets/images/file-icons/icon-google.svg" alt="">Log in with Google (Quem sabe no futuro?)</button>
                   </div>
                   <div class="text-block text-center my-3">
-                    <span class="text-small font-weight-semibold">Not a member ?</span>
-                    <a href="register.html" class="text-black text-small">Create new account</a>
+                    <span class="text-small font-weight-semibold">Ainda não é um membro?</span>
+                    <a href="register.html" class="text-black text-small">Clique aqui para criar uma conta</a>
                   </div>
                 </form>
               </div>
               <ul class="auth-footer">
                 <li>
-                  <a href="#">Conditions</a>
+                  <a href="https://www.linkedin.com/in/petrus-pradella-149215156/">Contato</a>
                 </li>
                 <li>
-                  <a href="#">Help</a>
-                </li>
-                <li>
-                  <a href="#">Terms</a>
+                  <a href="#">Termos de Uso</a>
                 </li>
               </ul>
-              <p class="footer-text text-center">copyright © 2018 Bootstrapdash. All rights reserved.</p>
+              <p class="footer-text text-center">copyright © 2020 Pétrus Pradella. All rights reserved.</p>
             </div>
           </div>
         </div>
@@ -91,12 +88,12 @@
     </div>
     <!-- container-scroller -->
     <!-- plugins:js -->
-    <script src="../../../assets/vendors/js/vendor.bundle.base.js"></script>
-    <script src="../../../assets/vendors/js/vendor.bundle.addons.js"></script>
+    <script src="../assets/vendors/js/vendor.bundle.base.js"></script>
+    <script src="../assets/vendors/js/vendor.bundle.addons.js"></script>
     <!-- endinject -->
     <!-- inject:js -->
-    <script src="../../../assets/js/shared/off-canvas.js"></script>
-    <script src="../../../assets/js/shared/misc.js"></script>
+    <script src="../assets/js/shared/off-canvas.js"></script>
+    <script src="../assets/js/shared/misc.js"></script>
     <!-- endinject -->
   </body>
 </html>
