--- a/src/demo_1/pages/ui-features/typography.html
+++ b/src/demo_1/pages/ui-features/typography.html
@@ -248,19 +248,19 @@
               <div class="collapse" id="auth">
                 <ul class="nav flex-column sub-menu">
                   <li class="nav-item">
-                    <a class="nav-link" href="../../pages/samples/blank-page.html"> Blank Page </a>
+                    <a class="nav-link" href="../../blank-page.html"> Blank Page </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../../pages/samples/login.html"> Login </a>
+                    <a class="nav-link" href="../../login.html"> Login </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../../pages/samples/register.html"> Register </a>
+                    <a class="nav-link" href="../../register.html"> Register </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../../pages/samples/error-404.html"> 404 </a>
+                    <a class="nav-link" href="../../errors/error-404.html"> 404 </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../../pages/samples/error-500.html"> 500 </a>
+                    <a class="nav-link" href="../../errors/error-500.html"> 500 </a>
                   </li>
                 </ul>
               </div>
