--- a/src/demo_1/errors/error-500.html
+++ b/src/demo_1/errors/error-500.html
@@ -35,12 +35,12 @@
               </div>
               <div class="row mt-5">
                 <div class="col-12 text-center mt-xl-2">
-                  <a class="text-white font-weight-medium" href="../index.html">Voltar ao Inicio</a>
+                  <a class="text-white font-weight-medium" href="/">Voltar ao Inicio</a>
                 </div>
               </div>
               <div class="row mt-5">
                 <div class="col-12 mt-xl-2">
-                  <p class="text-white font-weight-medium text-center">petrus_ant@hotmail.com &copy; 2020 All rights reserved.</p>
+                  <p class="text-white font-weight-medium text-center">Copyright © 2020 <a href="https://github.com/evernife" target="_blank" style="color: #3bd949">Pétrus Pradella</a>. All rights reserved.</p>
                 </div>
               </div>
             </div>
