--- a/src/demo_1/login.html
+++ b/src/demo_1/login.html
@@ -60,10 +60,7 @@
                     </div>
                     <a href="#" class="text-small forgot-password text-black">Esqueci minha senha</a>
                   </div>
-                  <div class="form-group">
-                    <button class="btn btn-block g-login">
-                      <img class="mr-3" src="../assets/images/file-icons/icon-google.svg" alt="">Log in with Google (Quem sabe no futuro?)</button>
-                  </div>
+
                   <div class="text-block text-center my-3">
                     <span class="text-small font-weight-semibold">Ainda não é um membro?</span>
                     <a href="register.html" class="text-black text-small">Clique aqui para criar uma conta</a>
@@ -95,5 +92,8 @@
     <script src="../assets/js/shared/off-canvas.js"></script>
     <script src="../assets/js/shared/misc.js"></script>
     <!-- endinject -->
+    <!-- pagescript -->
+    <script src="../assets/js/login.js"></script>
+    <!-- endpagescript -->
   </body>
 </html>
