--- a/src/demo_1/register.html
+++ b/src/demo_1/register.html
@@ -47,7 +47,7 @@
                       <input type="text" class="form-control" id="fullname" name="fullname" placeholder="Nome Completo">
                       <div class="input-group-append">
                         <span class="input-group-text">
-                          <i class="mdi mdi-check-outline"></i>
+                          <i class="mdi mdi-check-outline" id="fullname_checkmark"></i>
                         </span>
                       </div>
                     </div>
@@ -57,7 +57,7 @@
                       <input type="text" class="form-control" id="username" name="username" placeholder="Username (Como você quer ser chamado)">
                       <div class="input-group-append">
                         <span class="input-group-text">
-                          <i class="mdi mdi-check-outline"></i>
+                          <i class="mdi mdi-check-outline" id="username_checkmark"></i>
                         </span>
                       </div>
                     </div>
@@ -67,7 +67,7 @@
                       <input type="password" class="form-control" id="password" name="password" placeholder="Senha">
                       <div class="input-group-append">
                         <span class="input-group-text">
-                          <i class="mdi mdi-check-outline"></i>
+                          <i class="mdi mdi-check-outline" id="password_checkmark"></i>
                         </span>
                       </div>
                     </div>
@@ -77,7 +77,7 @@
                       <input type="password" class="form-control" id="confirmpassword" name="confirmpassword" placeholder="Confirmar Senha">
                       <div class="input-group-append">
                         <span class="input-group-text">
-                          <i class="mdi mdi-check-outline"></i>
+                          <i class="mdi mdi-check-outline" id="confirmpassword_checkmark"></i>
                         </span>
                       </div>
                     </div>
@@ -114,7 +114,7 @@
     <script src="../assets/js/shared/misc.js"></script>
     <!-- endinject -->
     <!-- pagescript -->
-    <script src="../assets/js/authme/register_page.js"></script>
+    <script src="../assets/js/register.js"></script>
     <!-- endpagescript -->
   </body>
 </html>
