few changes on hardcoded example

--- a/src/demo_1/dashboard/html/main/hardcoded.html
+++ b/src/demo_1/dashboard/html/main/hardcoded.html
@@ -6,6 +6,8 @@
                 <div class="d-flex flex-column flex-lg-row">
                     <p>Esse exemplo está HardCoded no site para mostrar o resultado de uma análise!</p>
                 </div>
+                <button type="button" class="btn btn-primary btn-fw" id="hardcoded-button-one">Modelo 1</button>
+                <button type="button" class="btn btn-secondary btn-fw" id="hardcoded-button-two">Modelo 2</button>
                 <div class="d-flex flex-column flex-lg-row">
                     <div class="ml-lg-auto" id="sales-statistics-legend"></div>
                 </div>
